--- a/about.html
+++ b/about.html
@@ -171,9 +171,8 @@
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                                <h5 class="mb-3">Book Library</h5>
-                                <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet
-                                    diam</p>
+                                <h5 class="mb-3">إإاختبارات دوريةة</h5>
+                                <p>اختبارات دورية واختبارات تقوية المناهج واللغات</p>
                             </div>
                         </div>
                     </div>
