working on webvsite

--- a/index.html
+++ b/index.html
@@ -268,8 +268,10 @@
                                     مرونة التعلم</p>
                             </div>
                         </div>
-                        <a class="btn btn-primary py-3 px-5 mt-2"
-                            href="">إقرأ المزيد</a>
+                        <a target="_blank"
+                            href="about.html"
+                            class="btn btn-primary py-3 px-5 mt-2"
+                            href="">تعرف علينا</a>
                     </div>
                 </div>
             </div>
@@ -559,10 +561,13 @@
 
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">الصفحة الرئيسية</a>
-                                <a href="">من نحن</a>
-                                <a href="">تواصل معنا</a>
-                                <a href="">استفسر</a>
+                                <a href="index.html">الصفحة الرئيسية</a>
+                                <a href="about.html">من نحن</a>
+                                <a href="contact.html">تواصل معنا</a>
+                                <a href="contact.html"> </a>
+                                <a href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                                    استفسر </a>
+
                             </div>
                         </div>
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
