--- a/about.html
+++ b/about.html
@@ -87,8 +87,7 @@
                         class="nav-item nav-link">الصفحة الرئيسية</a>
                     <a href="about.html"
                         class="nav-item nav-link active">من نحن</a>
-                    <a href="courses.html"
-                        class="nav-item nav-link">دوراتنا التدريبية</a>
+
                     <!-- <div class="nav-item dropdown">
                                 <a href="#"
                                     class="nav-link dropdown-toggle"
@@ -256,7 +255,8 @@
                                 <a href="about.html">من نحن</a>
                                 <a href="contact.html">تواصل معنا</a>
                                 <a href="contact.html"> </a>
-                                <a href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                                <a target="_blank"
+                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
                                     استفسر </a>
 
                             </div>
