--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                         class="nav-item nav-link active">الصفحة الرئيسية</a>
                     <a href="about.html"
                         class="nav-item nav-link">من نحن</a>
-                    <a href="courses.html"
-                        class="nav-item nav-link">دوراتنا التدريبية</a>
+
                     <!-- <div class="nav-item dropdown">
                         <a href="#"
                             class="nav-link dropdown-toggle"
@@ -293,8 +292,9 @@
                         <div class="row g-3">
                             <div class="col-lg-12 col-md-12 wow zoomIn"
                                 data-wow-delay="0.1s">
-                                <a class="position-relative d-block overflow-hidden"
-                                    href="">
+                                <a target="_blank"
+                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن تعلم اللغة التركية"
+                                    class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-1.jpg"
                                         alt="">
@@ -307,8 +307,9 @@
                             </div>
                             <div class="col-lg-6 col-md-12 wow zoomIn"
                                 data-wow-delay="0.3s">
-                                <a class="position-relative d-block overflow-hidden"
-                                    href="">
+                                <a target="_blank"
+                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن تعلم اللغة الإنجليزية"
+                                    class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-2.jpg"
                                         alt="">
@@ -321,8 +322,9 @@
                             </div>
                             <div class="col-lg-6 col-md-12 wow zoomIn"
                                 data-wow-delay="0.5s">
-                                <a class="position-relative d-block overflow-hidden"
-                                    href="">
+                                <a target="_blank"
+                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن تعلم اللغة الفرنسية"
+                                    class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-3.jpg"
                                         alt="">
@@ -335,8 +337,9 @@
                             </div>
                             <div class="col-lg-12 col-md-12 wow zoomIn"
                                 data-wow-delay="0.1s">
-                                <a class="position-relative d-block overflow-hidden"
-                                    href="">
+                                <a target="_blank"
+                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن دورات المحادثة في اللغة التركية"
+                                    class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-1.jpg"
                                         alt="">
@@ -352,8 +355,9 @@
                     <div class="col-lg-5 col-md-6 wow zoomIn"
                         data-wow-delay="0.7s"
                         style="min-height: 350px;">
-                        <a class="position-relative d-block h-100 overflow-hidden"
-                            href="">
+                        <a target="_blank"
+                            class="position-relative d-block h-100 overflow-hidden"
+                            href="https://wa.me/05525634757/?text=أريد الإستفسار عن دورات لدعم أولادي في مناهجهم الدراسية">
                             <img class="img-fluid position-absolute w-100 h-100"
                                 src="img/cat-4.jpg"
                                 alt=""
@@ -565,7 +569,8 @@
                                 <a href="about.html">من نحن</a>
                                 <a href="contact.html">تواصل معنا</a>
                                 <a href="contact.html"> </a>
-                                <a href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                                <a target="_blank"
+                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
                                     استفسر </a>
 
                             </div>
