--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,25 @@
 
     <head>
         <meta charset="utf-8">
-        <title> منصة زين التعليمية - شريك طفلك نحو النجاح </title>
+        <title>منصة زين التعليمية - شريك طفلك نحو النجاح</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
-        <meta content=""
-            name="keywords">
-        <meta content=""
-            name="description">
+        <meta
+            content="education, learning platform, language learning, interactive lessons, curriculum support, student development, flexible learning, continuous support, skill development, academic success, online academy, Zain Academy"
+            name="keywords"
+            lang="en">
+        <meta
+            content="تعليم, منصة تعليمية, تعلم اللغات, دروس تفاعلية, دعم المناهج, تطوير الطلاب, التعلم المرن, الدعم المستمر, تطوير المهارات, النجاح الأكاديمي, أكاديمية زين"
+            name="keywords"
+            lang="ar">
+        <meta
+            content="منصة زين التعليمية - شريك طفلك نحو النجاح هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
+            name="description"
+            lang="ar">
+        <meta
+            content="Zain Academy is a leading educational platform that offers exceptional opportunities for students to improve their skills and knowledge. We provide interactive lessons in a variety of languages including Turkish, English, and French. Our academy offers innovative educational tools that effectively enhance skill development. Additionally, Zain Academy provides comprehensive support for various school curricula. Students can interact and practice skills with their peers to improve their abilities effectively."
+            name="description"
+            lang="en">
 
         <!-- Favicon -->
         <link href="img/logo.png"
@@ -135,39 +147,57 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp"
                         data-wow-delay="0.1s">
                         <h5>تواصل معنا</h5>
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                                style="width: 50px; height: 50px;">
-                                <i class="fa fa-map-marker-alt text-white"></i>
+                        <a target="_blank"
+                            href="https://www.google.com/maps/@41.0216135,28.9520763,17z?entry=ttu">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
+                                    style="width: 50px; height: 50px;">
+                                    <i class="fa fa-map-marker-alt text-white"></i>
+                                </div>
+
+                                <div style="padding: 10px;"
+                                    class="ms-3">
+                                    <h5 class="text-primary"> المكتب </h5>
+                                    <p class="mb-0">تركيا, إسطنبول, الفاتح</p>
+                                </div>
+
+
                             </div>
-                            <div style="padding: 10px;"
-                                class="ms-3">
-                                <h5 class="text-primary"> المكتب </h5>
-                                <p class="mb-0">تركيا, إسطنبول, الفاتح</p>
+                        </a>
+                        <a target="_blank"
+                            href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                            <div class="d-flex align-items-center mb-3">
+                                <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
+                                    style="width: 50px; height: 50px;">
+                                    <i class="fa fa-phone-alt text-white"></i>
+                                </div>
+
+                                <div style="padding: 10px;"
+                                    class="ms-3">
+                                    <h5 class="text-primary">رقم الهاتف</h5>
+                                    <p class="mb-0">+90 552 563 47 57</p>
+                                </div>
+
+
                             </div>
-                        </div>
-                        <div class="d-flex align-items-center mb-3">
-                            <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                                style="width: 50px; height: 50px;">
-                                <i class="fa fa-phone-alt text-white"></i>
+                        </a>
+                        <a target="_blank"
+                            href="mailto:zainacademy3@gmail.com">
+                            <div class="d-flex align-items-center">
+                                <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
+                                    style="width: 50px; height: 50px;">
+                                    <i class="fa fa-envelope-open text-white"></i>
+                                </div>
+
+                                <div style="padding: 10px;"
+                                    class="ms-3">
+                                    <h5 class="text-primary">البريد الإلكتروني</h5>
+                                    <p class="mb-0">zainacademy3@gmail.com</p>
+                                </div>
+
+
                             </div>
-                            <div style="padding: 10px;"
-                                class="ms-3">
-                                <h5 class="text-primary">رقم الهاتف</h5>
-                                <p class="mb-0">+90 552 563 47 57</p>
-                            </div>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                                style="width: 50px; height: 50px;">
-                                <i class="fa fa-envelope-open text-white"></i>
-                            </div>
-                            <div style="padding: 10px;"
-                                class="ms-3">
-                                <h5 class="text-primary">البريد الإلكتروني</h5>
-                                <p class="mb-0">zainacademy3@gmail.com</p>
-                            </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="col-lg-4 col-md-12 wow fadeInUp"
@@ -237,9 +267,7 @@
                                 <a href="about.html">من نحن</a>
                                 <a href="contact.html">تواصل معنا</a>
                                 <a href="contact.html"> </a>
-                                <a target="_blank"
-                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
-                                    استفسر </a>
+
 
                             </div>
                         </div>
