--- a/about.html
+++ b/about.html
@@ -5,15 +5,25 @@
 
     <head>
         <meta charset="utf-8">
-        <title> منصة زين التعليمية - شريك طفلك نحو النجاح</title>
+        <title>منصة زين التعليمية - شريك طفلك نحو النجاح</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
-        <meta content=""
-            name="keywords">
-        <meta content=""
-            name="description">
-        <link href="img/logo.png"
-            rel="icon">
+        <meta
+            content="education, learning platform, language learning, interactive lessons, curriculum support, student development, flexible learning, continuous support, skill development, academic success, online academy, Zain Academy"
+            name="keywords"
+            lang="en">
+        <meta
+            content="تعليم, منصة تعليمية, تعلم اللغات, دروس تفاعلية, دعم المناهج, تطوير الطلاب, التعلم المرن, الدعم المستمر, تطوير المهارات, النجاح الأكاديمي, أكاديمية زين"
+            name="keywords"
+            lang="ar">
+        <meta
+            content="منصة زين التعليمية - شريك طفلك نحو النجاح هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
+            name="description"
+            lang="ar">
+        <meta
+            content="Zain Academy is a leading educational platform that offers exceptional opportunities for students to improve their skills and knowledge. We provide interactive lessons in a variety of languages including Turkish, English, and French. Our academy offers innovative educational tools that effectively enhance skill development. Additionally, Zain Academy provides comprehensive support for various school curricula. Students can interact and practice skills with their peers to improve their abilities effectively."
+            name="description"
+            lang="en">
         <!-- Favicon -->
 
 
@@ -227,7 +237,11 @@
                             class="mb-4">نحن ندعوك للانضمام إلى منصة زين والاستفادة من الفرص الرائعة
                             التي نقدمها للطلاب. دعونا نساعد طفلك في
                             بناء مستقبل مشرق وتحقيق أحلامه التعليمية!</p>
-                        <h1 class="mb-4">تواصل معنا</h1>
+
+                        <a target="_blank"
+                            href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                            <h1 class="mb-4">تواصل معنا</h1>
+                        </a>
                         <p style="font-size: 18px;font-weight: bold;"
                             class="mb-4">إذا كان لديك أي استفسارات أو استفسارات، يرجى عدم التردد في
                             التواصل مع فريق الدعم لدينا. نحن هنا
@@ -255,9 +269,7 @@
                                 <a href="about.html">من نحن</a>
                                 <a href="contact.html">تواصل معنا</a>
                                 <a href="contact.html"> </a>
-                                <a target="_blank"
-                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
-                                    استفسر </a>
+
 
                             </div>
                         </div>
