--- a/about.html
+++ b/about.html
@@ -273,8 +273,7 @@
 
                             </div>
                         </div>
-                        <br>
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0 textssssss">
 
 
                             تم التصميم من خلال <a target="_blank"
