--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                         استثنائية!
                                     </p>
                                     <a target="_blank"
-                                        href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم"
+                                        href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85"
                                         class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">
                                         إنضم إلينا</a>
 
@@ -305,7 +305,7 @@
                             <div class="col-lg-12 col-md-12 wow zoomIn"
                                 data-wow-delay="0.1s">
                                 <a target="_blank"
-                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن تعلم اللغة التركية"
+                                    href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AA%D8%B9%D9%84%D9%85%20%D8%A7%D9%84%D9%84%D8%BA%D8%A9%20%D8%A7%D9%84%D8%AA%D8%B1%D9%83%D9%8A%D8%A9"
                                     class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-1.jpg"
@@ -320,7 +320,7 @@
                             <div class="col-lg-6 col-md-12 wow zoomIn"
                                 data-wow-delay="0.3s">
                                 <a target="_blank"
-                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن تعلم اللغة الإنجليزية"
+                                    href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AA%D8%B9%D9%84%D9%85%20%D8%A7%D9%84%D9%84%D8%BA%D8%A9%20%D8%A7%D9%84%D8%A5%D9%86%D8%AC%D9%84%D9%8A%D8%B2%D9%8A%D8%A9"
                                     class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-2.jpg"
@@ -335,7 +335,8 @@
                             <div class="col-lg-6 col-md-12 wow zoomIn"
                                 data-wow-delay="0.5s">
                                 <a target="_blank"
-                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن تعلم اللغة الفرنسية"
+                                    href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AA%D8%B9%D9%84%D9%85%20%D8%A7%D9%84%D9%84%D8%BA%D8%A9%20%D8%A7%D9%84%D9%81%D8%B1%D9%86%D8%B3%D9%8A%D8%A9
+"
                                     class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-3.jpg"
@@ -350,7 +351,8 @@
                             <div class="col-lg-12 col-md-12 wow zoomIn"
                                 data-wow-delay="0.1s">
                                 <a target="_blank"
-                                    href="https://wa.me/05525634757/?text=أريد الإستفسار عن دورات المحادثة في اللغة التركية"
+                                    href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AF%D9%88%D8%B1%D8%A7%D8%AA%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%AF%D8%AB%D8%A9%20%D9%81%D9%8A%20%D8%A7%D9%84%D9%84%D8%BA%D8%A9%20%D8%A7%D9%84%D8%AA%D8%B1%D9%83%D9%8A%D8%A9
+"
                                     class="position-relative d-block overflow-hidden">
                                     <img class="img-fluid"
                                         src="img/cat-1.jpg"
@@ -369,7 +371,7 @@
                         style="min-height: 350px;">
                         <a target="_blank"
                             class="position-relative d-block h-100 overflow-hidden"
-                            href="https://wa.me/05525634757/?text=أريد الإستفسار عن دورات لدعم أولادي في مناهجهم الدراسية">
+                            href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AF%D9%88%D8%B1%D8%A7%D8%AA%20%D9%84%D8%AF%D8%B9%D9%85%20%D8%A3%D9%88%D9%84%D8%A7%D8%AF%D9%8A%20%D9%81%D9%8A%20%D9%85%D9%86%D8%A7%D9%87%D8%AC%D9%87%D9%85%20%D8%A7%D9%84%D8%AF%D8%B1%D8%A7%D8%B3%D9%8A%D8%A9">
                             <img class="img-fluid position-absolute w-100 h-100"
                                 src="img/cat-4.jpg"
                                 alt=""
@@ -407,7 +409,8 @@
                                     class="w-100 d-flex justify-content-end position-absolute bottom-0 start-0 mb-4">
 
                                     <a target="_blank"
-                                        href="https://wa.me/05525634757/?text=أريد الإستفسار عن دورة متقدمة في اللغة التركية للمحادثة اليومية"
+                                        href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AF%D9%88%D8%B1%D8%A9%20%D9%85%D8%AA%D9%82%D8%AF%D9%85%D8%A9%20%D9%81%D9%8A%20%D8%A7%D9%84%D9%84%D8%BA%D8%A9%20%D8%A7%D9%84%D8%AA%D8%B1%D9%83%D9%8A%D8%A9%20%D9%84%D9%84%D9%85%D8%AD%D8%A7%D8%AF%D8%AB%D8%A9%20%D8%A7%D9%84%D9%8A%D9%88%D9%85%D9%8A%D8%A9
+"
                                         class="flex-shrink-0 btn btn-sm btn-primary px-3"
                                         style="border-radius: 0 30px 30px 0;">أنضم الان</a>
                                 </div>
@@ -440,7 +443,7 @@
                                     class="w-100 d-flex justify-content-end position-absolute bottom-0 start-0 mb-4">
 
                                     <a target="_blank"
-                                        href="https://wa.me/05525634757/?text=أريد الإستفسار عن دورات في مستويات اللغة التركية"
+                                        href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AF%D9%88%D8%B1%D8%A7%D8%AA%20%D9%81%D9%8A%20%D9%85%D8%B3%D8%AA%D9%88%D9%8A%D8%A7%D8%AA%20%D8%A7%D9%84%D9%84%D8%BA%D8%A9%20%D8%A7%D9%84%D8%AA%D8%B1%D9%83%D9%8A%D8%A9"
                                         class="flex-shrink-0 btn btn-sm btn-primary px-3"
                                         style="border-radius: 0 30px 30px 0;">إنضم الان</a>
                                 </div>
@@ -476,7 +479,7 @@
                                     class="w-100 d-flex justify-content-end position-absolute bottom-0 start-0 mb-4">
 
                                     <a target="_blank"
-                                        href="https://wa.me/05525634757/?text=أريد الإستفسار عن دروس خاصة تشرح اللمناهج الدراسية لجميع المراحل"
+                                        href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AF%D8%B1%D9%88%D8%B3%20%D8%AE%D8%A7%D8%B5%D8%A9%20%D8%AA%D8%B4%D8%B1%D8%AD%20%D8%A7%D9%84%D9%84%D9%85%D9%86%D8%A7%D9%87%D8%AC%20%D8%A7%D9%84%D8%AF%D8%B1%D8%A7%D8%B3%D9%8A%D8%A9%20%D9%84%D8%AC%D9%85%D9%8A%D8%B9%20%D8%A7%D9%84%D9%85%D8%B1%D8%A7%D8%AD%D9%84"
                                         class="flex-shrink-0 btn btn-sm btn-primary px-3"
                                         style="border-radius: 0 30px 30px 0;">إنضم الان</a>
                                 </div>
