--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
                             بناء مستقبل مشرق وتحقيق أحلامه التعليمية!</p>
 
                         <a target="_blank"
-                            href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                            href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85">
                             <h1 class="mb-4">تواصل معنا</h1>
                         </a>
                         <p style="font-size: 18px;font-weight: bold;"
