--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
                             </div>
                         </a>
                         <a target="_blank"
-                            href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم">
+                            href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85">
                             <div class="d-flex align-items-center mb-3">
                                 <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
                                     style="width: 50px; height: 50px;">
@@ -242,7 +242,7 @@
                                 </div>
                                 <div class="col-12">
                                     <a target="_blank"
-                                        href="https://wa.me/05525634757/?text=أريد الإستفسار عن خدماتكم"
+                                        href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85"
                                         class="btn btn-primary w-100 py-3">أرسل الرسالة</a>
                                 </div>
                             </div>
