--- a/testimonial.html
+++ b/testimonial.html
@@ -47,7 +47,8 @@
         <link href="css/style.css"
             rel="stylesheet">
     </head>
-
+    <script src="//code.tidio.co/qomb9umgqkujldr86a8qac1tllfovdko.js"
+        async></script>
     <body>
         <!-- Spinner Start -->
         <div id="spinner"
