--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>منصة زين التعليمية - شريك طفلك نحو النجاح</title>
+        <title>منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
         <meta
@@ -17,7 +17,7 @@
             name="keywords"
             lang="ar">
         <meta
-            content="منصة زين التعليمية - شريك طفلك نحو النجاح هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
+            content="منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
             name="description"
             lang="ar">
         <meta
@@ -196,14 +196,12 @@
                     <div class="col-lg-12 wow fadeInUp"
                         data-wow-delay="0.3s">
 
-                        <h1 class="mb-4">أهلاً وسهلاً بك في منصة زين - شريك طفلك نحو النجاح</h1>
+                        <h1 class="mb-4">أهلاً وسهلاً بك في منصة زين - شريك طفلك نحو النجاح للمستقبل</h1>
                         <p style="font-size: 18px;font-weight: bold;"
-                            class="mb-4">نحن
-                            نفتخر بتقديم بيئة تعلم رائدة تهدف إلى تحسين مهارات ومعرفة الطلاب بطرق
-                            مبتكرة وممتعة. تقوم منصة
-                            زين بتوفير فرص استثنائية للطلاب لتعلم مجموعة متنوعة من اللغات بما في ذلك
-                            التركية والإنجليزية
-                            والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية.</p>
+                            class="mb-4">منصة زين التعليميه التي تصنع مستقبل التعليم الإلكتروني في عالم الذكاء الاصطناعي بسوريا.
+                            نحن نجمع بين خبرة المعلمين الممتدة وأحدث تقنيات التعليم، لتمنح كل طالب فرصة التعلم بطريقة ذكية،
+                            تفاعلية، ومصممة خصيصًا له.
+                            اكتشف كيف تغير هذه المنصة قواعد اللعبة وتفتح أفقًا جديدًا لمستقبل التعليم في سوريا!</p>
                         <h1 class="mb-4">رسالتنا</h1>
                         <p style="font-size: 18px;font-weight: bold;"
                             class="mb-4">رسالتنا هي تمكين الطلاب وتعزيز مسارات تعلمهم بشكل فعال من
