--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>منصة زين التعليمية - شريك طفلك نحو النجاح</title>
+        <title>منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
         <meta
@@ -17,7 +17,7 @@
             name="keywords"
             lang="ar">
         <meta
-            content="منصة زين التعليمية - شريك طفلك نحو النجاح هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
+            content="منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
             name="description"
             lang="ar">
         <meta
