improving the website

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
+        <title>أكاديمية زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
         <meta
@@ -13,11 +13,11 @@
             name="keywords"
             lang="en">
         <meta
-            content="تعليم, منصة تعليمية, تعلم اللغات, دروس تفاعلية, دعم المناهج, تطوير الطلاب, التعلم المرن, الدعم المستمر, تطوير المهارات, النجاح الأكاديمي, أكاديمية زين"
+            content="تعليم, أكاديمية تعليمية, تعلم اللغات, دروس تفاعلية, دعم المناهج, تطوير الطلاب, التعلم المرن, الدعم المستمر, تطوير المهارات, النجاح الأكاديمي, أكاديمية زين"
             name="keywords"
             lang="ar">
         <meta
-            content="منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
+            content="أكاديمية زين التعليمية - شريك طفلك نحو النجاح للمستقبل هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم أكاديمية زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
             name="description"
             lang="ar">
         <meta
@@ -82,7 +82,7 @@
                     src="img/logo.png"
                     alt="">
                 <h2 class="m-0 text-primary">
-                    </i>منصة زين التعليمية
+                    </i>أكاديمية زين التعليمية
                 </h2>
             </a>
             <button type="button"
@@ -144,7 +144,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
                                 <h5 class="mb-3">مرونة في التعلم</h5>
-                                <p>منصة زين توفر مرونة لتلبية احتياجات التعلم المختلفة، مع وصول سهل
+                                <p>أكاديمية زين توفر مرونة لتلبية احتياجات التعلم المختلفة، مع وصول سهل
                                     ومريح للموارد التعليمية والدورات.</p>
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-globe text-primary mb-4"></i>
                                 <h5 class="mb-3">تفاعل ومحادثة فعّالة</h5>
-                                <p>منصة زين تشجع على التفاعل وتطوير مهارات اللغة من خلال فرص
+                                <p>أكاديمية زين تشجع على التفاعل وتطوير مهارات اللغة من خلال فرص
                                     المحادثة والتواصل بين المتعلمين والمعلمين.</p>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                             <div class="p-4">
                                 <i class="fa fa-3x fa-home text-primary mb-4"></i>
                                 <h5 class="mb-3">دعم شامل للمناهج المدرسية</h5>
-                                <p>منصة زين تقدم دعمًا كاملاً للمناهج المدرسية، بموارد تعليمية
+                                <p>أكاديمية زين تقدم دعمًا كاملاً للمناهج المدرسية، بموارد تعليمية
                                     متنوعة
                                     تساعد المعلمين والطلاب على تحقيق أهدافهم عن بعد بشكل كامل</p>
                             </div>
@@ -177,8 +177,8 @@
                         <div class="service-item text-center pt-3">
                             <div class="p-4">
                                 <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                                <h5 class="mb-3">منصة تعلم متعددة اللغات</h5>
-                                <p>منصة زين توفر تجربة تعلم استثنائية للغات مثل اللغة التركية،
+                                <h5 class="mb-3">أكاديمية تعلم متعددة اللغات</h5>
+                                <p>أكاديمية زين توفر تجربة تعلم استثنائية للغات مثل اللغة العربية، التركية،
                                     الإنجليزية، والفرنسية، مع دروس تفاعلية
                                     وأدوات مبتكرة لتحسين مهارات اللغة</p>
                             </div>
@@ -196,12 +196,12 @@
                     <div class="col-lg-12 wow fadeInUp"
                         data-wow-delay="0.3s">
 
-                        <h1 class="mb-4">أهلاً وسهلاً بك في منصة زين - شريك طفلك نحو النجاح للمستقبل</h1>
+                        <h1 class="mb-4">أهلاً وسهلاً بك في أكاديمية زين - شريك طفلك نحو النجاح للمستقبل</h1>
                         <p style="font-size: 18px;font-weight: bold;"
-                            class="mb-4">منصة زين التعليميه التي تصنع مستقبل التعليم الإلكتروني في عالم الذكاء الاصطناعي بسوريا.
+                            class="mb-4">أكاديمية زين التعليميه التي تصنع مستقبل التعليم الإلكتروني في عالم الذكاء الاصطناعي بسوريا.
                             نحن نجمع بين خبرة المعلمين الممتدة وأحدث تقنيات التعليم، لتمنح كل طالب فرصة التعلم بطريقة ذكية،
                             تفاعلية، ومصممة خصيصًا له.
-                            اكتشف كيف تغير هذه المنصة قواعد اللعبة وتفتح أفقًا جديدًا لمستقبل التعليم في سوريا!</p>
+                            اكتشف كيف تغير هذه الأكاديمية قواعد اللعبة وتفتح أفقًا جديدًا لمستقبل التعليم في سوريا!</p>
                         <h1 class="mb-4">رسالتنا</h1>
                         <p style="font-size: 18px;font-weight: bold;"
                             class="mb-4">رسالتنا هي تمكين الطلاب وتعزيز مسارات تعلمهم بشكل فعال من
@@ -233,12 +233,13 @@
                         </p>
                         <h1 class="mb-4">انضم إلينا اليوم</h1>
                         <p style="font-size: 18px;font-weight: bold;"
-                            class="mb-4">نحن ندعوك للانضمام إلى منصة زين والاستفادة من الفرص الرائعة
+                            class="mb-4">نحن ندعوك للانضمام إلى أكاديمية زين والاستفادة من الفرص الرائعة
                             التي نقدمها للطلاب. دعونا نساعد طفلك في
                             بناء مستقبل مشرق وتحقيق أحلامه التعليمية!</p>
 
                         <a target="_blank"
-                            href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85">
+                            href="https://wa.me/05525634757/?text=يعطيكم العافية أكاديمية زين 
+                            اريد الحصول على معلومات حول خدماتكم التعليمية">
                             <h1 class="mb-4">تواصل معنا</h1>
                         </a>
                         <p style="font-size: 18px;font-weight: bold;"
