--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
+        <title>أكاديمية زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
         <meta
@@ -13,11 +13,11 @@
             name="keywords"
             lang="en">
         <meta
-            content="تعليم, منصة تعليمية, تعلم اللغات, دروس تفاعلية, دعم المناهج, تطوير الطلاب, التعلم المرن, الدعم المستمر, تطوير المهارات, النجاح الأكاديمي, أكاديمية زين"
+            content="تعليم, أكاديمية تعليمية, تعلم اللغات, دروس تفاعلية, دعم المناهج, تطوير الطلاب, التعلم المرن, الدعم المستمر, تطوير المهارات, النجاح الأكاديمي, أكاديمية زين"
             name="keywords"
             lang="ar">
         <meta
-            content="منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم منصة زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
+            content="أكاديمية زين التعليمية - شريك طفلك نحو النجاح للمستقبل هي بيئة تعلم رائدة تقدم فرصًا استثنائية للطلاب لتحسين مهاراتهم ومعرفتهم. تتيح للمتعلمين تعلم مجموعة متنوعة من اللغات بما في ذلك التركية والإنجليزية والفرنسية من خلال دروس تفاعلية ومجموعات تفاعلية. توفر الأكاديمية أدوات تعليمية مبتكرة تعزز تطوير المهارات بفعالية. بالإضافة إلى ذلك، تقدم أكاديمية زين دعماً شاملاً للمناهج المدرسية من مراحل مختلفة. يمكن للطلاب التفاعل وممارسة المهارات مع زملائهم لتحسين قدراتهم بشكل فعال."
             name="description"
             lang="ar">
         <meta
@@ -83,7 +83,7 @@
                     src="img/logo.png"
                     alt="">
                 <h2 class="m-0 text-primary">
-                    </i>منصة زين التعليمية
+                    </i>أكاديمية زين التعليمية
                 </h2>
             </a>
             <button type="button"
@@ -166,7 +166,8 @@
                             </div>
                         </a>
                         <a target="_blank"
-                            href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85">
+                            href="https://wa.me/05525634757/?text=يعطيكم العافية أكاديمية زين 
+                            اريد الحصول على معلومات حول خدماتكم التعليمية">
                             <div class="d-flex align-items-center mb-3">
                                 <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
                                     style="width: 50px; height: 50px;">
@@ -243,7 +244,8 @@
                                 </div>
                                 <div class="col-12">
                                     <a target="_blank"
-                                        href="https://wa.me/05525634757/?text=%D8%A3%D8%B1%D9%8A%D8%AF%20%D8%A7%D9%84%D8%A5%D8%B3%D8%AA%D9%81%D8%B3%D8%A7%D8%B1%20%D8%B9%D9%86%20%D8%AE%D8%AF%D9%85%D8%A7%D8%AA%D9%83%D9%85"
+                                        href="https://wa.me/05525634757/?text=يعطيكم العافية أكاديمية زين 
+                                        اريد الحصول على معلومات حول خدماتكم التعليمية"
                                         class="btn btn-primary w-100 py-3">أرسل الرسالة</a>
                                 </div>
                             </div>
