--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title> منصة زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
+        <title> أكاديمية زين التعليمية - شريك طفلك نحو النجاح للمستقبل</title>
         <meta content="width=device-width, initial-scale=1.0"
             name="viewport">
         <meta content=""
